tests/NormalTests/paczka1/fuzzy1/82473715.err
Error in line 1: fNIP9LuhUuG A123 96,6
Error in line 9: iluu4l5zVk A123 45,1
Error in line 18: 1nY S109 3,0
Error in line 33: HgLhrkI3 S893 36,8
Error in line 31: m5ydc S109 95,0
